{
    "name": "PauseMenuControls",
    "maps": [
        {
            "name": "PauseMenu",
            "id": "883424fd-d263-4b4d-b293-0498670236c9",
            "actions": [
                {
                    "name": "OpenPauseMenu",
                    "type": "Button",
                    "id": "3f8e8c37-1a34-4078-a40f-e2369f6efce6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8538eddf-0a73-4ca5-b659-bb9803e15088",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "OpenPauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}